Tabs: selector report display

--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/tab_content.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/tab_content.vm
@@ -18,9 +18,11 @@
     #set($sessionReport = $selectorReport)
     #set($table_part_only = true)
     #set($data_part_only = true)
-    <table id=reportData cellspacing="0" ><tbody name=reportBody id=reportBody class="selectable">
-      #parse("gui/reports_and_tables/report_data.vm")
-    </tbody></table>
+    <div class="selectorReport" style="max-height:15em;overflow:scroll">
+      <table id=reportData cellspacing="0" style="background-color:#EEF3F9"><tbody name=reportBody id=reportBody class="selectable">
+        #parse("gui/reports_and_tables/report_data.vm")
+      </tbody></table>
+    </div>
   #end
   #set($fields = $sessionTable.getFields())
   #set($primaryKey = $sessionTable.getPrimaryKey())
