--- a/gtpb_clientside/styles/report.css
+++ b/gtpb_clientside/styles/report.css
@@ -8,6 +8,7 @@ table#reportData {
   height:100%;
   border-collapse:collapse;
   border:0;
+  background-color: white;
 }												
 
 #wrapper table#reportData td {
