--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/table_data_row_two_columns.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/table_data_row_two_columns.vm
@@ -26,7 +26,7 @@
     #if($formTabs.size() > 0)
       #parse("gui/reports_and_tables/tabs/form_tabber.vm")
     #end
-    <div #if($formStyle == "TWO_COLUMNS") class="two_cols" #end id="form_tabs_$sessionTable.getInternalTableName()_$sessionTable.getInternalTableName()"> <!-- start of sections container -->
+    <div #if(($formStyle == "TWO_COLUMNS") && !$parentTable) class="two_cols" #end id="form_tabs_$sessionTable.getInternalTableName()_$sessionTable.getInternalTableName()"> <!-- start of sections container -->
     #set($firstSection = false)
   #end
   #if($formStyle == 'TWO_COLUMNS')
@@ -34,7 +34,7 @@
     ## Workaround for https://bugzilla.mozilla.org/show_bug.cgi?id=549114
     <table style="width:100%"><tr><td style="column-break-inside: avoid;">
   #else
-    <div class="block two_cols non_section">
+    <div class="block #if(!$parentTable) two_cols non_section #end">
   #end
   <h1>$field</h1>
   #set($sectionHasImage=false)
@@ -42,9 +42,9 @@
   #if($field.equals($firstField))
     #if((!$hasSections) && ($formTabs.size() > 0))
       #parse("gui/reports_and_tables/tabs/form_tabber.vm")
-      <div class="block two_cols non_section" id="form_tabs_$sessionTable.getInternalTableName()_$sessionTable.getInternalTableName()">
+      <div class="block #if(!$parentTable) two_cols non_section #end" id="form_tabs_$sessionTable.getInternalTableName()_$sessionTable.getInternalTableName()">
     #else
-      <div class="block two_cols non_section">
+      <div class="block #if(!$parentTable) two_cols non_section #end">
     #end
   #end
   #set($fieldClass = $field.getClass().getSimpleName())
@@ -66,7 +66,7 @@
     </div> <!-- end of two sections container -->
   #end
   #foreach($formTab in $formTabs)
-    <div #if($formStyle == "TWO_COLUMNS") class="two_cols" #end style="display:none" id="form_tabs_$sessionTable.getInternalTableName()_$formTab.getTable().getInternalTableName()">
+    <div #if(($formStyle == "TWO_COLUMNS") && !$parentTable) class="two_cols" #end style="display:none" id="form_tabs_$sessionTable.getInternalTableName()_$formTab.getTable().getInternalTableName()">
     </div>
   #end
 #end
