--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/table_data_row_two_columns.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/tabs/table_data_row_two_columns.vm
@@ -66,7 +66,7 @@
     </div> <!-- end of two sections container -->
   #end
   #foreach($formTab in $formTabs)
-    <div #if(($formStyle == "TWO_COLUMNS") && !$parentTable) class="two_cols" #end style="display:none" id="form_tabs_$sessionTable.getInternalTableName()_$formTab.getTable().getInternalTableName()">
+    <div style="display:none" id="form_tabs_$sessionTable.getInternalTableName()_$formTab.getTable().getInternalTableName()">
     </div>
   #end
 #end
