Fields array in report data: 1D rather than 2D

--- a/gtpb_clientside/WEB-INF/templates/gui/administration/information/list.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/administration/information/list.vm
@@ -24,7 +24,7 @@ $viewTools.startTimer("gui/administration/information/list.vm")
 #set($selection=$sessionData.getModule())
 
 ## No data in pane 2
-#set($fields=[['','']])
+#set($fields=[''])
 #set($data=[])
 
 #parse('gui/pane2/include_delete_checkboxes.vm')
