--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2_head.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2_head.vm
@@ -19,8 +19,9 @@
 <tr>
   <th class=leading><div>&nbsp;</div></th>
   #foreach($field in $fields)
-    #set($internalFieldName = $field.get(0))
-    #set($fieldObject = $field.get(1))
+    #set($internalFieldName = $field.getInternalFieldName())
+    ## Todo: merge fieldObject and field variables into one
+    #set($fieldObject = $field)
     #set($fieldName = $fieldObject.toString())
     #if($fieldObject.getHidden())
       #set($fieldName = $fieldName.replace(" [Auto]",""))
@@ -48,8 +49,8 @@
 <tr name="fieldFilters" id="fieldFilters" #if($filtersShouldBeShown == 'false') style="display:none" #end>
   <td class="leading">#if($mobile_device)&nbsp;#else<div id="filterhelp">?</div><div class="ab_tooltip" rel="resources/reports/filtering_help.htm"></div>#end</td>
   #foreach($field in $fields)
-    #set($internalFieldName = $field.get(0))
-    #set($fieldObject = $field.get(1))
+    #set($internalFieldName = $field.getInternalFieldName())
+    #set($fieldObject = $field)
     <td><div>
       #parse("gui/pane2/filter_input.vm")
     </div></td>
