--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/include_delete_checkboxes.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/include_delete_checkboxes.vm
@@ -25,7 +25,7 @@
 #end
 #if($isNotTable||$view.loggedInUserAllowedTo('EDIT_TABLE_DATA',$sessionTable))
 #if(!$mobile_device)
-  #set($success=$fields.add(['','<div style="padding-left: 3px;"><input type="checkbox" onclick="fLocateDeleteMarkers(this); fSelectAll(this)"></div>']))
+  #set($success=$fields.add('<div style="padding-left: 3px;"><input type="checkbox" onclick="fLocateDeleteMarkers(this); fSelectAll(this)"></div>'))
   #set($thisUniqueId = -1)
   #foreach($row in $data)
    #set($lastUniqueId = $thisUniqueId)
