--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2_body.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2_body.vm
@@ -77,10 +77,10 @@ $viewTools.startTimer("gui/pane2/pane2_body")
 #if($data.size() == 0)
   <tr class="rowa">
 	<td class="leading">&nbsp;</td>
-      #foreach($field in $reportBaseFields)
-	    #if (((!$field.isPrimaryKey()) && (!$field.getReportCalcField().isReportHidden())) || ($sessionContext == "SYSADMIN"))##
-		  <td style="width:150px">&nbsp;</td>
-		#end
+    #foreach($field in $fields) ##$reportBaseFields
+	    ###if (((!$field.isPrimaryKey()) && (!$field.getReportCalcField().isReportHidden())) || ($sessionContext == "SYSADMIN"))##
+		    <td style="width:150px">&nbsp;</td>
+		  ###end
 	  #end
 	<td class="trailing">&nbsp;</td>
   </tr>
@@ -122,7 +122,7 @@ $viewTools.startTimer("gui/pane2/pane2_body")
           #set($cellNumber = $foreach.count - 1)
           #set($colour = $rowColours.get($cellNumber))
 		  #set($rightAlign = false)
-		  #set($field = $fields.get($cellNumber).get(1))
+		  #set($field = $fields.get($cellNumber))
 		  #set($fieldCategory = $field.getFieldCategory().toString())
 		  #if(($fieldCategory == "NUMBER") || ($fieldCategory == "SEQUENCE"))
 		    #set($rightAlign = true)
@@ -164,7 +164,7 @@ $viewTools.startTimer("gui/pane2/pane2_body")
       #else ## no colour information present
         #foreach($cell in $thisValues)
           #set($cellNumber = $foreach.count - 1)
-		  #set($field = $fields.get($cellNumber).get(1))
+		  #set($field = $fields.get($cellNumber))
 		  #if($field.getContentSize() > 100)
         #set($cellContentLength=$cell.length() * 2)
 		  #else
