--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/report_data.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/report_data.vm
@@ -79,7 +79,13 @@
       #set($dataRowField = $dataRowFields.get($field))##
       #if($printout && ($field.getContentSize() > 500))##
         #set($success=$row.add($dataRowField.getKeyValue()))##
-      #else##
+      #elseif($parentTable && ($field.getDbType() == "BOOLEAN"))##
+        #if($dataRowField.getKeyValue() == "true")
+          #set($success=$row.add($field.getFieldName()))
+        #else
+          #set($success=$row.add("not $field.getFieldName()"))
+        #end
+      #else
         #set($success=$row.add($dataRowField.getDisplayValue()))##
       #end##
       #set($success=$colours.add($dataRowField.getStandardDevHexColour()))##
