--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/report_data.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/report_data.vm
@@ -83,10 +83,10 @@
         #if($dataRowField.getKeyValue() == "true")
           #set($success=$row.add($field.getFieldName()))
         #else
-          #set($success=$row.add("not $field.getFieldName()"))
+          #set($success=$row.add("not $field"))
         #end
       #else
-        #set($success=$row.add($dataRowField.getDisplayValue()))##
+        #set($success=$row.add("$field.getDbType() $dataRowField.getDisplayValue()"))##
       #end##
       #set($success=$colours.add($dataRowField.getStandardDevHexColour()))##
     #end##
