Selector report: name boolean fields: -debug

--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/report_data.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/report_data.vm
@@ -80,13 +80,13 @@
       #if($printout && ($field.getContentSize() > 500))##
         #set($success=$row.add($dataRowField.getKeyValue()))##
       #elseif($parentTable && ($field.getDbType() == "BOOLEAN"))##
-        #if($dataRowField.getKeyValue() == "true")
-          #set($success=$row.add($field.getFieldName()))
-        #else
-          #set($success=$row.add("not $field"))
-        #end
-      #else
-        #set($success=$row.add("$field.getDbType() $dataRowField.getDisplayValue()"))##
+        #if($dataRowField.getKeyValue() == "true")##
+          #set($success=$row.add($field.getFieldName()))##
+        #else##
+          #set($success=$row.add("not $field"))##
+        #end##
+      #else##
+        #set($success=$row.add($dataRowField.getDisplayValue()))##
       #end##
       #set($success=$colours.add($dataRowField.getStandardDevHexColour()))##
     #end##
