Selector report: name date fields

--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -771,6 +771,7 @@ div#reportData {
 .form_tabber {
   background-color: #cccccc;
   margin: 0.5em;
+  margin-bottom: 0;
   border-radius: 0.5em;
   margin-right: 0;
 }
