--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/report_data.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/report_data.vm
@@ -79,12 +79,18 @@
       #set($dataRowField = $dataRowFields.get($field))##
       #if($printout && ($field.getContentSize() > 500))##
         #set($success=$row.add($dataRowField.getKeyValue()))##
-      #elseif($parentTable && ($field.getDbType() == "BOOLEAN"))##
-        #if($dataRowField.getKeyValue() == "true")##
-          #set($success=$row.add($field.getFieldName()))##
-        #else##
-          #set($success=$row.add("not $field"))##
-        #end##
+      #elseif($parentTable)##
+        #if($field.getDbType() == "BOOLEAN")
+          #if($dataRowField.getKeyValue() == "true")##
+            #set($success=$row.add($field.getFieldName().toLowerCase()))##
+          #else##
+            #set($success=$row.add("not $field.getFieldName().toLowerCase()"))##
+          #end##
+        #elseif($field.getDbType() == "TIMESTAMP")
+          #set($success=$row.add("$field $dataRowField.getDisplayValue()"))##
+        #else
+          #set($success=$row.add($dataRowField.getDisplayValue()))##
+        #end
       #else##
         #set($success=$row.add($dataRowField.getDisplayValue()))##
       #end##
