--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -820,6 +820,7 @@ div#reportData {
   margin-top: 0;
   border: 0.75em solid #cccccc;
   border-top: 0;
+  border-radius: 0 0 0.5em 0.5em;
 }
 
 .selectorReport table#reportData {
