--- a/gtpb_clientside/WEB-INF/templates/gui/resources/input/date.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/input/date.vm
@@ -82,18 +82,18 @@
 	  #end
     </select>
   #end
-  <input type="text" #if(!$updateAsType) name="$field.getInternalFieldName()_years" #end maxlength="4" size="4" maxKeyCount="4" value="$years" wrapperAttribute="gtpb_$field.getInternalFieldName()_years" onkeyup="fKeyUpEvent(this)" #if($globalEdit) global_edit="true" #end>
+  <input type="text" #if(!$updateAsType) name="$field.getInternalFieldName()_years" #end maxlength="4" size="4" maxKeyCount="4" value="$years" wrapperAttribute="gtpb_$field.getInternalFieldName()_years" onkeyup="fKeyUpEvent(this, event)" #if($globalEdit) global_edit="true" #end>
   #if($dateResolution >= $CONST_HOUR_OF_DAY)
 	time 
-    <input type="text" #if(!$updateAsType) name="$field.getInternalFieldName()_hours" #end maxlength="2" size="2" maxKeyCount="2" value="$hours" wrapperAttribute="gtpb_$field.getInternalFieldName()_hours" onkeyup="fKeyUpEvent(this)" #if($globalEdit) global_edit="true" #end>
+    <input type="text" #if(!$updateAsType) name="$field.getInternalFieldName()_hours" #end maxlength="2" size="2" maxKeyCount="2" value="$hours" wrapperAttribute="gtpb_$field.getInternalFieldName()_hours" onkeyup="fKeyUpEvent(this, event)" #if($globalEdit) global_edit="true" #end>
   #end
   #if($dateResolution >= $CONST_MINUTE) 
-    : <input type="text" #if(!$updateAsType) name="$field.getInternalFieldName()_minutes" #end maxlength="2" size="2" maxKeyCount="2" value="$minutes" wrapperAttribute="gtpb_$field.getInternalFieldName()_minutes" onkeyup="fKeyUpEvent(this)" #if($globalEdit) global_edit="true" #end>
+    : <input type="text" #if(!$updateAsType) name="$field.getInternalFieldName()_minutes" #end maxlength="2" size="2" maxKeyCount="2" value="$minutes" wrapperAttribute="gtpb_$field.getInternalFieldName()_minutes" onkeyup="fKeyUpEvent(this, event)" #if($globalEdit) global_edit="true" #end>
   #elseif($dateResolution == $CONST_HOUR_OF_DAY)
 	hundred hours
   #end
   #if($dateResolution >= $CONST_SECOND) 
-    : <input type="text" #if(!$updateAsType) name="$field.getInternalFieldName()_seconds" #end maxlength="2" size="2" maxKeyCount="2" value="$seconds" wrapperAttribute="gtpb_$field.getInternalFieldName()_seconds" onkeyup="fKeyUpEvent(this)" #if($globalEdit) global_edit="true" #end>
+    : <input type="text" #if(!$updateAsType) name="$field.getInternalFieldName()_seconds" #end maxlength="2" size="2" maxKeyCount="2" value="$seconds" wrapperAttribute="gtpb_$field.getInternalFieldName()_seconds" onkeyup="fKeyUpEvent(this, event)" #if($globalEdit) global_edit="true" #end>
   #end
   #if($dateResolution >= $CONST_DAY_OF_MONTH)
 	###if($mobile_device)
