--- a/gtpb_clientside/styles/report.css
+++ b/gtpb_clientside/styles/report.css
@@ -271,7 +271,7 @@ table#reportData tr.excludedRecord td {
 	background: white url('../styles/ajax-loader.gif') no-repeat 50% 50%;
 	position: absolute;
 	width: 100%;
-	/* height: 100%; */
+	height: 100%;
 	opacity: 0.8;
 	filter: alpha(opacity = 80);
 	top: 0;
