Reinstate pane 2 sorting

--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/include_delete_checkboxes.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/include_delete_checkboxes.vm
@@ -31,7 +31,7 @@
    #set($lastUniqueId = $thisUniqueId)
    #set($thisUniqueId = $row.get(2))
    #if($thisUniqueId != $lastUniqueId)
-    #set($success=$row.get(0).add('<input type="checkbox" onclick="fLocateDeleteMarkers(this)">'))
+    #set($success=$row.get(0).add('<input type="checkbox" onclick="fLocateDeleteMarkers(this);">'))
    #else
     #set($success=$row.get(0).add('&nbsp;'))
    #end
