--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2_head.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2_head.vm
@@ -28,10 +28,10 @@
     #end
     ## row0 contains the internal field name
     ## row1 contains the display field
-    <th #if(($fieldObject.getClass().getSimpleName() == "TextFieldDefn") || ($fieldObject.getClass().getSimpleName() == "BigTextFieldDefn")) maxTextLength="$fieldObject.getContentSize()" #end #if($internalFieldName && $internalFieldName!="")internalName="$internalFieldName" onclick="fSetSort(this)"#end>
+    <th #if(($fieldObject.getClass().getSimpleName() == "TextFieldDefn") || ($fieldObject.getClass().getSimpleName() == "BigTextFieldDefn")) maxTextLength="$fieldObject.getContentSize()" #end #if($internalFieldName!="")internalName="$internalFieldName" onclick="fSetSort(this)"#end>
     #if($fieldObject)
       #if($internalFieldName && $internalFieldName!="")
-        <div class="ab_field_title">$fieldName</div>
+        <div class="ab_field_title">$field.getClass().getSimpleName() $fieldName</div>
         <div class="ab_tooltip" rel="?return=gui/reports_and_tables/field_tooltip&set_custom_string=true&key=tooltip_internalfieldname&value=$internalFieldName"></div>
       #else
         <div>$fieldName</div>
