--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -718,7 +718,7 @@ div#reportData {
 .date select, .date input {
   width: auto!important;
   float: none!important;
-  border: 1px solid #cecece!important;
+  /* border: 1px solid #cecece!important; */
 }
 	
 .block input.ac_input {
