--- a/gtpb_clientside/WEB-INF/templates/gui/resources/input/referenced_report_data.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/input/referenced_report_data.vm
@@ -15,13 +15,15 @@
 ##  You should have received a copy of the GNU General Public License
 ##  along with agileBase.  If not, see <http://www.gnu.org/licenses/>.
 ##
+Referenced field $field:
 #if($referencedData.contains("span")) ## If there's any referenced data predefined
   #if($viewOnly)
 	  <p>$referencedData</p>
   #else
-    <p style="line-height:1.5em; color: black">$referencedData</p>
+    <p style="line-height:1.5em; color: black">Predefined: $referencedData</p>
   #end  
 #else
+  Not predefined.
 	#set($referencedData = false)
     #set($fieldTable = $field.getTableContainingField())
     #set($primaryKey = $fieldTable.getPrimaryKey())
@@ -34,85 +36,86 @@
 	#if(!$rrd_rowId)
 	  #set($rrd_rowId = $sessionData.getRowId())
 	#end
-    #set($filter = $viewTools.getNewFilterMap())
-    #set($success = $filter.put($primaryKey, "$rrd_rowId"))
-    #set($rrd_reportDataRows = $view.getReportDataRows($referencedReport, 10, $filter, true)) ## return 10 records max.
-    #foreach($rrd_reportDataRow in $rrd_reportDataRows)
-      #set($rowContainsData = false)
-      #set($linked = false)
-      #foreach($reportBaseField in $reportBaseFields)
-        #set($printoutSetting = $reportBaseField.getPrintoutSetting().name())
-    	  #if(($reportBaseField.getClass().getSimpleName().equals("CalculationFieldDefn")) || (!$reportBaseField.getTableContainingField().equals($fieldTable)))
-        	#set($partFieldCategory = $reportBaseField.getFieldCategory())
-        	#if($partFieldCategory == "TEXT" || $partFieldCategory == "DATE" || $partFieldCategory == "NUMBER")
-        	  #set($rrd_displayValue = $rrd_reportDataRow.getValue($reportBaseField).getDisplayValue())
-        	  #if($rrd_displayValue != "")
-        		#set($rowContainsData = true)
-				#set($displayCategory = "")
-				#if($rrd_displayValue.length() < 20)
-				  #set($displayCategory = $rrd_displayValue.toLowerCase())
-				  #set($displayCategory = $displayCategory.replaceAll("[^a-z]",""))
-				  #if($displayCategory.startsWith("phone"))
-					<img src="resources/icons/applications/16x16/Dial.png" class="mini_icon"> 
-				  #elseif($displayCategory.startsWith("email"))
-					<img src="resources/icons/applications/16x16/E-mail.png" class="mini_icon"> 
-				  #elseif($displayCategory.startsWith("todo"))
-					<img src="resources/icons/applications/16x16/Problem.png" class="mini_icon"> 
-				  #elseif($displayCategory.startsWith("inprogress"))
-					<img src="resources/icons/applications/16x16/Hourglass.png" class="mini_icon"> 
-				  #elseif($displayCategory.startsWith("complete") || $displayCategory.startsWith("actioncomplete") || $displayCategory == "done")
-					<img src="resources/icons/applications/16x16/Apply.png" class="mini_icon"> 
-				  #elseif($displayCategory.startsWith("partner") || $displayCategory.startsWith("team") || $displayCategory.startsWith("client"))
-					<img src="resources/icons/applications/16x16/Person.png" class="mini_icon"> 
-				  #elseif($displayCategory == "hot")
-					<img src="resources/icons/applications/16x16/Hot.png" class="mini_icon"> 
-				  #elseif($displayCategory == "warm")
-					<img src="resources/icons/applications/16x16/Warm.png" class="mini_icon"> 
-				  #elseif($displayCategory.startsWith("cold") || $displayCategory.startsWith("cool"))
-					<img src="resources/icons/applications/16x16/Cold.png" class="mini_icon"> 
-				  #elseif($displayCategory == "high" || ($displayCategory.contains("high") && $displayCategory.contains("priority")))
-					<img src="resources/icons/applications/16x16/Star.png" class="mini_icon"> 
-					<img src="resources/icons/applications/16x16/Star.png" class="mini_icon"> 
-					<img src="resources/icons/applications/16x16/Star.png" class="mini_icon"> 
-				  #elseif(($displayCategory == "med") || ($displayCategory == "medium"))
-					<img src="resources/icons/applications/16x16/Star.png" class="mini_icon"> 
-					<img src="resources/icons/applications/16x16/Star.png" class="mini_icon"> 
-				  #elseif($displayCategory == "low")
-					<img src="resources/icons/applications/16x16/Star.png" class="mini_icon">
-				  #end
-        #end
-          #if($edit_nav && !$linked)
-            #if($referencedReport.getParentTable().equals($fieldTable))
-              ## We are referencing up (or sideways) - the referenced report is based on the same table as the main slide table
-              #set($goToTable = $reportBaseField.getTableContainingField())
-              #set($goToRowId = $rrd_reportDataRow.getValue($goToTable.getPrimaryKey()))
-            #else
-              #set($goToTable = $referencedReport.getParentTable())
-              #set($goToRowId = $rrd_reportDataRow.getRowId())
-            #end
-            <a class="reference_link" href="AppController.servlet?return=gui/edit_nav/edit&set_table=$goToTable.getInternalTableName()&set_row_id=$goToRowId">
-          #end
-          #if(($printoutSetting == "NAME_AND_VALUE") || ($printoutSetting == "NAME_VALUE_LINEBREAK"))
-            <span class="greytext">$reportBaseField:</span>
-          #end
-          $rrd_displayValue<br>
-          #if($edit_nav && !$linked)</a> #set($linked = true) #end
+  #set($filter = $viewTools.getNewFilterMap())
+  #set($success = $filter.put($primaryKey, "$rrd_rowId"))
+  Getting report data for $referencedReport with filter $filter<br>
+  #set($rrd_reportDataRows = $view.getReportDataRows($referencedReport, 10, $filter, true)) ## return 10 records max.
+  #foreach($rrd_reportDataRow in $rrd_reportDataRows)
+    #set($rowContainsData = false)
+    #set($linked = false)
+    #foreach($reportBaseField in $reportBaseFields)
+      #set($printoutSetting = $reportBaseField.getPrintoutSetting().name())
+  	  #if(($reportBaseField.getClass().getSimpleName().equals("CalculationFieldDefn")) || (!$reportBaseField.getTableContainingField().equals($fieldTable)))
+      	#set($partFieldCategory = $reportBaseField.getFieldCategory())
+      	#if($partFieldCategory == "TEXT" || $partFieldCategory == "DATE" || $partFieldCategory == "NUMBER")
+      	  #set($rrd_displayValue = $rrd_reportDataRow.getValue($reportBaseField).getDisplayValue())
+      	  #if($rrd_displayValue != "")
+      		#set($rowContainsData = true)
+			#set($displayCategory = "")
+			#if($rrd_displayValue.length() < 20)
+			  #set($displayCategory = $rrd_displayValue.toLowerCase())
+			  #set($displayCategory = $displayCategory.replaceAll("[^a-z]",""))
+			  #if($displayCategory.startsWith("phone"))
+				<img src="resources/icons/applications/16x16/Dial.png" class="mini_icon"> 
+			  #elseif($displayCategory.startsWith("email"))
+				<img src="resources/icons/applications/16x16/E-mail.png" class="mini_icon"> 
+			  #elseif($displayCategory.startsWith("todo"))
+				<img src="resources/icons/applications/16x16/Problem.png" class="mini_icon"> 
+			  #elseif($displayCategory.startsWith("inprogress"))
+				<img src="resources/icons/applications/16x16/Hourglass.png" class="mini_icon"> 
+			  #elseif($displayCategory.startsWith("complete") || $displayCategory.startsWith("actioncomplete") || $displayCategory == "done")
+				<img src="resources/icons/applications/16x16/Apply.png" class="mini_icon"> 
+			  #elseif($displayCategory.startsWith("partner") || $displayCategory.startsWith("team") || $displayCategory.startsWith("client"))
+				<img src="resources/icons/applications/16x16/Person.png" class="mini_icon"> 
+			  #elseif($displayCategory == "hot")
+				<img src="resources/icons/applications/16x16/Hot.png" class="mini_icon"> 
+			  #elseif($displayCategory == "warm")
+				<img src="resources/icons/applications/16x16/Warm.png" class="mini_icon"> 
+			  #elseif($displayCategory.startsWith("cold") || $displayCategory.startsWith("cool"))
+				<img src="resources/icons/applications/16x16/Cold.png" class="mini_icon"> 
+			  #elseif($displayCategory == "high" || ($displayCategory.contains("high") && $displayCategory.contains("priority")))
+				<img src="resources/icons/applications/16x16/Star.png" class="mini_icon"> 
+				<img src="resources/icons/applications/16x16/Star.png" class="mini_icon"> 
+				<img src="resources/icons/applications/16x16/Star.png" class="mini_icon"> 
+			  #elseif(($displayCategory == "med") || ($displayCategory == "medium"))
+				<img src="resources/icons/applications/16x16/Star.png" class="mini_icon"> 
+				<img src="resources/icons/applications/16x16/Star.png" class="mini_icon"> 
+			  #elseif($displayCategory == "low")
+				<img src="resources/icons/applications/16x16/Star.png" class="mini_icon">
 			  #end
-			#elseif($partFieldCategory == "FILE")
-        	  #set($rrd_displayValue = $rrd_reportDataRow.getValue($reportBaseField).getDisplayValue())
-        	  #if($rrd_displayValue != "")
-        #set($fileValue = $viewTools.getFileValueTool($rrd_displayValue))
-				#if($fileValue.isImage())
-			      #set($downloadBase = "uploads/$reportBaseField.getTableContainingField().getInternalTableName()/$reportBaseField.getInternalFieldName()/$rrd_reportDataRow.getRowId()/")
-			      #set($downloadUrl = $viewTools.escapeForURL("$downloadBase$fileValue"))
-			      #if(!$edit_nav)<a href="$downloadUrl" target="_blank">#end
-				    <img border="0" src="$downloadUrl.40.$fileValue.getExtension()" class="cross_reference_image" />
-			      #if(!$edit_nav)</a>#end
-				#end
-			  #end
-		    #end
-    	#end
       #end
-      #if($rowContainsData && ($rrd_reportDataRows.size() > $foreach.count)) <p></p> #end
+        #if($edit_nav && !$linked)
+          #if($referencedReport.getParentTable().equals($fieldTable))
+            ## We are referencing up (or sideways) - the referenced report is based on the same table as the main slide table
+            #set($goToTable = $reportBaseField.getTableContainingField())
+            #set($goToRowId = $rrd_reportDataRow.getValue($goToTable.getPrimaryKey()))
+          #else
+            #set($goToTable = $referencedReport.getParentTable())
+            #set($goToRowId = $rrd_reportDataRow.getRowId())
+          #end
+          <a class="reference_link" href="AppController.servlet?return=gui/edit_nav/edit&set_table=$goToTable.getInternalTableName()&set_row_id=$goToRowId">
+        #end
+        #if(($printoutSetting == "NAME_AND_VALUE") || ($printoutSetting == "NAME_VALUE_LINEBREAK"))
+          <span class="greytext">$reportBaseField:</span>
+        #end
+        $rrd_displayValue<br>
+        #if($edit_nav && !$linked)</a> #set($linked = true) #end
+		  #end
+		#elseif($partFieldCategory == "FILE")
+      	  #set($rrd_displayValue = $rrd_reportDataRow.getValue($reportBaseField).getDisplayValue())
+      	  #if($rrd_displayValue != "")
+      #set($fileValue = $viewTools.getFileValueTool($rrd_displayValue))
+			#if($fileValue.isImage())
+		      #set($downloadBase = "uploads/$reportBaseField.getTableContainingField().getInternalTableName()/$reportBaseField.getInternalFieldName()/$rrd_reportDataRow.getRowId()/")
+		      #set($downloadUrl = $viewTools.escapeForURL("$downloadBase$fileValue"))
+		      #if(!$edit_nav)<a href="$downloadUrl" target="_blank">#end
+			    <img border="0" src="$downloadUrl.40.$fileValue.getExtension()" class="cross_reference_image" />
+		      #if(!$edit_nav)</a>#end
+			#end
+		  #end
+	    #end
+  	#end
     #end
+    #if($rowContainsData && ($rrd_reportDataRows.size() > $foreach.count)) <p></p> #end
+  #end
 #end
